[gd_scene load_steps=9 format=3 uid="uid://0j5vdmg7o2rk"]

[ext_resource type="Texture2D" uid="uid://4lfpo8gykisg" path="res://Textures/Stats/BG.png" id="1_8g02b"]
[ext_resource type="Script" uid="uid://bl0fffr3hgo31" path="res://Scripts/Combat/Stats.gd" id="1_i4i0r"]
[ext_resource type="Texture2D" uid="uid://dn88ao216kxq6" path="res://Textures/Stats/Line.png" id="2_u8em0"]
[ext_resource type="FontFile" uid="uid://dwlaoeqs2oqod" path="res://Font/8-BIT_WONDER.TTF" id="3_qphhe"]
[ext_resource type="Texture2D" uid="uid://d4lu3v3ps7bmv" path="res://Textures/Stats/BTN Exit.png" id="5_bh64c"]
[ext_resource type="Script" uid="uid://xfvim6l1n0jy" path="res://Scenes/Stats/button.gd" id="6_dh7g4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dc8h3"]
texture = ExtResource("5_bh64c")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fbhxa"]
texture = ExtResource("5_bh64c")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_i4i0r")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(960, 544)
scale = Vector2(9.64384, 4.54645)
texture = ExtResource("1_8g02b")

[node name="Line" type="Sprite2D" parent="."]
position = Vector2(965.612, 612.918)
rotation = 1.5708
scale = Vector2(4.50226, 0.884437)
texture = ExtResource("2_u8em0")

[node name="Stats" type="Label" parent="."]
offset_left = 272.0
offset_top = 160.0
offset_right = 1648.0
offset_bottom = 264.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 80
text = "Stats"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Joueur" type="Label" parent="Stats"]
layout_mode = 0
offset_left = 8.0
offset_top = 112.0
offset_right = 688.0
offset_bottom = 240.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 50
text = "Joueur"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Total_damage" type="Label" parent="Stats/Joueur"]
layout_mode = 0
offset_left = 16.0
offset_top = 128.0
offset_right = 544.0
offset_bottom = 192.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 25
text = "Degats totaux "
vertical_alignment = 1

[node name="Total_heal" type="Label" parent="Stats/Joueur"]
layout_mode = 0
offset_left = 16.0
offset_top = 192.0
offset_right = 552.0
offset_bottom = 256.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 25
text = "Soin totaux"
vertical_alignment = 1

[node name="Total_shield" type="Label" parent="Stats/Joueur"]
layout_mode = 0
offset_left = 16.0
offset_top = 256.0
offset_right = 576.0
offset_bottom = 320.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 25
text = "Shield totaux"
vertical_alignment = 1

[node name="Max_damage" type="Label" parent="Stats/Joueur"]
layout_mode = 0
offset_left = 16.0
offset_top = 320.0
offset_right = 544.0
offset_bottom = 384.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 25
text = "Degat max "
vertical_alignment = 1

[node name="Max_heal" type="Label" parent="Stats/Joueur"]
layout_mode = 0
offset_left = 16.0
offset_top = 384.0
offset_right = 552.0
offset_bottom = 448.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 25
text = "Soin max
"
vertical_alignment = 1

[node name="Max_shield" type="Label" parent="Stats/Joueur"]
layout_mode = 0
offset_left = 16.0
offset_top = 448.0
offset_right = 576.0
offset_bottom = 512.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 25
text = "Shield max"
vertical_alignment = 1

[node name="succes" type="Label" parent="Stats/Joueur"]
layout_mode = 0
offset_left = 16.0
offset_top = 512.0
offset_right = 578.0
offset_bottom = 576.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 25
text = "Echec | Reussis| Critique "
vertical_alignment = 1

[node name="Total_hit" type="Label" parent="Stats/Joueur"]
layout_mode = 0
offset_left = 16.0
offset_top = 576.0
offset_right = 576.0
offset_bottom = 640.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 25
text = "Nombre d'attaque"
vertical_alignment = 1

[node name="Ennemi" type="Label" parent="Stats"]
layout_mode = 0
offset_left = 688.0
offset_top = 112.0
offset_right = 1368.0
offset_bottom = 240.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 50
text = "Ennemie"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Total_damage" type="Label" parent="Stats/Ennemi"]
layout_mode = 0
offset_left = 40.0
offset_top = 128.0
offset_right = 568.0
offset_bottom = 192.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 25
text = "Degats totaux "
vertical_alignment = 1

[node name="Total_heal" type="Label" parent="Stats/Ennemi"]
layout_mode = 0
offset_left = 40.0
offset_top = 192.0
offset_right = 576.0
offset_bottom = 256.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 25
text = "Soin totaux"
vertical_alignment = 1

[node name="Total_shield" type="Label" parent="Stats/Ennemi"]
layout_mode = 0
offset_left = 40.0
offset_top = 256.0
offset_right = 600.0
offset_bottom = 320.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 25
text = "Shield totaux"
vertical_alignment = 1

[node name="Max_damage" type="Label" parent="Stats/Ennemi"]
layout_mode = 0
offset_left = 40.0
offset_top = 320.0
offset_right = 568.0
offset_bottom = 384.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 25
text = "Degat max "
vertical_alignment = 1

[node name="Max_heal" type="Label" parent="Stats/Ennemi"]
layout_mode = 0
offset_left = 40.0
offset_top = 384.0
offset_right = 576.0
offset_bottom = 448.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 25
text = "Soin max
"
vertical_alignment = 1

[node name="Max_shield" type="Label" parent="Stats/Ennemi"]
layout_mode = 0
offset_left = 40.0
offset_top = 448.0
offset_right = 600.0
offset_bottom = 512.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 25
text = "Shield max"
vertical_alignment = 1

[node name="succes" type="Label" parent="Stats/Ennemi"]
layout_mode = 0
offset_left = 40.0
offset_top = 512.0
offset_right = 602.0
offset_bottom = 576.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 25
text = "Echec | Reussis| Critique "
vertical_alignment = 1

[node name="Total_hit" type="Label" parent="Stats/Ennemi"]
layout_mode = 0
offset_left = 40.0
offset_top = 576.0
offset_right = 600.0
offset_bottom = 640.0
theme_override_fonts/font = ExtResource("3_qphhe")
theme_override_font_sizes/font_size = 25
text = "Nombre d'attaque"
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = 1536.0
offset_top = 192.0
offset_right = 1600.0
offset_bottom = 256.0
theme_override_styles/hover = SubResource("StyleBoxTexture_dc8h3")
theme_override_styles/normal = SubResource("StyleBoxTexture_fbhxa")
script = ExtResource("6_dh7g4")

[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
